# Autonomous_Document_Planner

./: .gitignore
Backend/: Doc_builder.py  Llm_client.py  Models.py  Planner.py  Requirements.txt  main.py  pyproject.toml
Backend/Frontend/: index.css  index.html  script.js
Frontend/: index.html  script.js
