[project]
name = "agent-project"
version = "0.1.0"
description = "Autonomous AI Agent for Business Document Generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-docx>=1.1.2",
    "groq>=0.11.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "requests>=2.34.2"
]

[tool.uv]
package = false
